documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long SUPERFRMADDR;
typedef unsigned long LISTADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

typedef struct
{
	USHORT	vercount;
	USHORT	timestampl;
	USHORT	timestamph;
	USHORT	activity;
	ULONG   data;
	USHORT  wordnum;       //ARINC 717 records only
	USHORT  subframe;      //ARINC 717 records only
	USHORT  superframe;    //ARINC 717 records only
} SEQRECORD;
typedef SEQRECORD * LPSEQRECORD;

L43W32API SCHNDX __stdcall L43_SchedEntry(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGap(USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGapFixed(USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedGapList(USHORT gapval,LISTADDR listaddr,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedHalt(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedInt(USHORT condition,USHORT tagval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedMsg(MSGADDR msgaddr,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedMsgEx(MSGADDR msgaddr,USHORT gapval,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedPause(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedPulse(INT dionum,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedRestart(INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedReturn(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SeqConfig(ULONG configval,HCARD handleval);

L43W32API INT __stdcall L43_SeqInterval(INT interval,INT mode,HCARD handleval);

L43W32API USHORT __stdcall L43_SeqIntFrequency(USHORT intfreq,HCARD handleval);

L43W32API BOOL __stdcall L43_SeqIsRunning(HCARD handleval);

L43W32API USHORT __stdcall L43_SeqRd(LPSEQRECORD buf,HCARD handleval);

L43W32API BOOL __stdcall L43_SeqStatus(HCARD handleval);

L43W32API VOID __stdcall L43_TimerClear(HCARD handleval);

L43W32API ULONG __stdcall L43_TimerRd(HCARD handleval);

L43W32API INT __stdcall L43_TimerResolution(INT timerresol,HCARD handleval);


/**
*
*  L43/717 functions.
*
**/

L43W32API ERRVAL __stdcall L43_Ch717Status(LPUSHORT buf,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_Get717ChanCount(LPINT rcvcount,LPINT xmtcount,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717BiPhaseChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717Chan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717RcvChan(INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_Is717XmtChan(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmBlkRd(LPUSHORT databuf,INT subframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmBlkWr(LPUSHORT databuf,INT subframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmStatus(LPUSHORT buf,INT subframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmWordConfig(ULONG configval,INT subframe,INT word,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmWordRd(LPUSHORT value,INT subframe,INT word,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmWordWr(USHORT value,INT subframe,INT word,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmConfig(INT count,INT framespersuperframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmCounterPos(INT subframe,INT word,INT channum,HCARD handleval);

L43W32API SUPERFRMADDR __stdcall L43_SuperFrmDefine(INT subframe,INT word,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmWordRd(LPUSHORT value,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmWordWr(USHORT value,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmWordConfig(ULONG configval,INT superfrmnum,SUPERFRMADDR superfrmaddr,INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_SyncTest(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SyncValRd(LPINT syncword1,LPINT syncword2,LPINT syncword3,LPINT syncword4,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SyncValWr(INT syncword1,INT syncword2,INT syncword3,INT syncword4,INT channum,HCARD handleval);


/**
*
*  Internal functions used by the L43 Driver.
*
**/

L43W32API ULONG __stdcall L43_AddrDSP(ULONG addr);

L43W32API ULONG __stdcall L43_AddrHost(ULONG addr);

L43W32API ERRVAL __stdcall L43_AsciiToMant(LPCSTR str,LPULONG mant,LPINT exp);

L43W32API ERRVAL __stdcall L43_CardBoot(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardCloseAll(VOID);

L43W32API ULONG __stdcall L43_CardGetInfo(USHORT infotype,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

L43W32API VOID __stdcall L43_CardInit(VOID);

L43W32API BOOL __stdcall L43_CardIsRunning(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardNop(HCARD handleval);

L43W32API HCARD __stdcall L43_CardOpenEx(LPCSTR cardname,INT cardnum);

L43W32API HCARD __stdcall L43_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L43W32API VOID __stdcall L43_CardResetEx(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardTest(USHORT level,HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardTest0(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardTest1(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardTest2(HCARD handleval);

L43W32API ERRVAL __stdcall L43_CardTest3(HCARD handleval);

L43W32API ULONG __stdcall L43_CFGRdL(INT addrval,HCARD handleval);

L43W32API VOID __stdcall L43_CFGWrL(ULONG value,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_Ch717Config(ULONG configval,INT channum,HCARD handleval);

L43W32API BASEADDR __stdcall L43_Ch717Create(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_Ch717Reset(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_ChConfigEx(ULONG configval,USHORT count,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChDARClr(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_ChDARGet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_ChDARRdL(USHORT addrval,INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_ChDARRdW(USHORT addrval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChDARSet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChDARWrL(ULONG value,USHORT addrval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_ChDARWrW(USHORT value,USHORT addrval,INT channum,HCARD handleval);

L43W32API BOOL __stdcall L43_ChStart(INT channum,HCARD handleval);