documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32VB.BAS

Public Declare Function L43_SchedEntry Lib "L43W32.DLL" Alias "_L43_SchedEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedGap Lib "L43W32.DLL" Alias "_L43_SchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedGapFixed Lib "L43W32.DLL" Alias "_L43_SchedGapFixed@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedGapList Lib "L43W32.DLL" Alias "_L43_SchedGapList@16" (ByVal gapval As Integer, ByVal listaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedHalt Lib "L43W32.DLL" Alias "_L43_SchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedInt Lib "L43W32.DLL" Alias "_L43_SchedInt@16" (ByVal condition As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedMsg Lib "L43W32.DLL" Alias "_L43_SchedMsg@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedMsgEx Lib "L43W32.DLL" Alias "_L43_SchedMsgEx@16" (ByVal msgaddr As Long, ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedPause Lib "L43W32.DLL" Alias "_L43_SchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedPulse Lib "L43W32.DLL" Alias "_L43_SchedPulse@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedRestart Lib "L43W32.DLL" Alias "_L43_SchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SchedReturn Lib "L43W32.DLL" Alias "_L43_SchedReturn@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SeqConfig Lib "L43W32.DLL" Alias "_L43_SeqConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SeqInterval Lib "L43W32.DLL" Alias "_L43_SeqInterval@12" (ByVal interval As Long, ByVal mode As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SeqIntFrequency Lib "L43W32.DLL" Alias "_L43_SeqIntFrequency@8" (ByVal intfreq As Integer, ByVal handleval As Long) As Integer
Public Declare Function L43_SeqIsRunning Lib "L43W32.DLL" Alias "_L43_SeqIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function L43_SeqRd Lib "L43W32.DLL" Alias "_L43_SeqRd@8" (ByRef buf As SEQRECORD, ByVal handleval As Long) As Integer
Public Declare Function L43_SeqStatus Lib "L43W32.DLL" Alias "_L43_SeqStatus@4" (ByVal handleval As Long) As Long
Public Declare Function L43_TimerClear Lib "L43W32.DLL" Alias "_L43_TimerClear@4" (ByVal handleval As Long) As Long
Public Declare Function L43_TimerRd Lib "L43W32.DLL" Alias "_L43_TimerRd@4" (ByVal handleval As Long) As Long
Public Declare Function L43_TimerResolution Lib "L43W32.DLL" Alias "_L43_TimerResolution@8" (ByVal timerresol As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Ch717Status Lib "L43W32.DLL" Alias "_L43_Ch717Status@12" (ByRef buf As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Get717ChanCount Lib "L43W32.DLL" Alias "_L43_Get717ChanCount@12" (ByRef rcvcount As Long, ByRef xmtcount As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Is717BiPhaseChan Lib "L43W32.DLL" Alias "_L43_Is717BiPhaseChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Is717Chan Lib "L43W32.DLL" Alias "_L43_Is717Chan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Is717RcvChan Lib "L43W32.DLL" Alias "_L43_Is717RcvChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Is717XmtChan Lib "L43W32.DLL" Alias "_L43_Is717XmtChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmBlkRd Lib "L43W32.DLL" Alias "_L43_SubFrmBlkRd@16" (ByRef databuf As Integer, ByVal subframe As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmBlkWr Lib "L43W32.DLL" Alias "_L43_SubFrmBlkWr@16" (ByRef databuf As Integer, ByVal subframe As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmStatus Lib "L43W32.DLL" Alias "_L43_SubFrmStatus@16" (ByRef buf As Integer, ByVal subframe As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmWordConfig Lib "L43W32.DLL" Alias "_L43_SubFrmWordConfig@20" (ByVal configval As Long, ByVal subframe As Long, ByVal word As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmWordRd Lib "L43W32.DLL" Alias "_L43_SubFrmWordRd@20" (ByRef value As Integer, ByVal subframe As Long, ByVal word As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SubFrmWordWr Lib "L43W32.DLL" Alias "_L43_SubFrmWordWr@20" (ByVal value As Integer, ByVal subframe As Long, ByVal word As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmConfig Lib "L43W32.DLL" Alias "_L43_SuperFrmConfig@16" (ByVal count As Long, ByVal framespersuperframe As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmCounterPos Lib "L43W32.DLL" Alias "_L43_SuperFrmCounterPos@16" (ByVal subframe As Long, ByVal word As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmDefine Lib "L43W32.DLL" Alias "_L43_SuperFrmDefine@16" (ByVal subframe As Long, ByVal word As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmWordRd Lib "L43W32.DLL" Alias "_L43_SuperFrmWordRd@20" (ByRef value As Integer, ByVal superfrmnum As Long, ByVal superfrmaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmWordWr Lib "L43W32.DLL" Alias "_L43_SuperFrmWordWr@20" (ByVal value As Integer, ByVal superfrmnum As Long, ByVal superfrmaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SuperFrmWordConfig Lib "L43W32.DLL" Alias "_L43_SuperFrmWordConfig@20" (ByVal configval As Long, ByVal superfrmnum As Long, ByVal superfrmaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SyncTest Lib "L43W32.DLL" Alias "_L43_SyncTest@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SyncValRd Lib "L43W32.DLL" Alias "_L43_SyncValRd@24" (ByRef syncword1 As Long, ByRef syncword2 As Long, ByRef syncword3 As Long, ByRef syncword4 As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_SyncValWr Lib "L43W32.DLL" Alias "_L43_SyncValWr@24" (ByVal syncword1 As Long, ByVal syncword2 As Long, ByVal syncword3 As Long, ByVal syncword4 As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_AddrDSP Lib "L43W32.DLL" Alias "_L43_AddrDSP@4" (ByVal addr As Long) As Long
Public Declare Function L43_AddrHost Lib "L43W32.DLL" Alias "_L43_AddrHost@4" (ByVal addr As Long) As Long
Public Declare Function L43_AsciiToMant Lib "L43W32.DLL" Alias "_L43_AsciiToMant@12" (ByRef str As String, ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function L43_CardBoot Lib "L43W32.DLL" Alias "_L43_CardBoot@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardCloseAll Lib "L43W32.DLL" Alias "_L43_CardCloseAll@0" () As Long
Public Declare Function L43_CardGetInfo Lib "L43W32.DLL" Alias "_L43_CardGetInfo@8" (ByVal infotype As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_CardGetInfoEx Lib "L43W32.DLL" Alias "_L43_CardGetInfoEx@20" (ByRef bufmodel As Integer, ByVal bufmodelcount As Integer, ByRef buffeature As Integer, ByVal buffeaturecount As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_CardInit Lib "L43W32.DLL" Alias "_L43_CardInit@0" () As Long
Public Declare Function L43_CardIsRunning Lib "L43W32.DLL" Alias "_L43_CardIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardNop Lib "L43W32.DLL" Alias "_L43_CardNop@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardOpenEx Lib "L43W32.DLL" Alias "_L43_CardOpenEx@8" (ByRef cardname As String, ByVal cardnum As Long) As Long
Public Declare Function L43_CardOpenExx Lib "L43W32.DLL" Alias "_L43_CardOpenExx@16" (ByRef cardname As String, ByVal cardnum As Long, ByRef happwnd As Long, ByVal uiremovalmsg As Integer) As Long
Public Declare Function L43_CardResetEx Lib "L43W32.DLL" Alias "_L43_CardResetEx@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardTest Lib "L43W32.DLL" Alias "_L43_CardTest@8" (ByVal level As Integer, ByVal handleval As Long) As Long
Public Declare Function L43_CardTest0 Lib "L43W32.DLL" Alias "_L43_CardTest0@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardTest1 Lib "L43W32.DLL" Alias "_L43_CardTest1@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardTest2 Lib "L43W32.DLL" Alias "_L43_CardTest2@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CardTest3 Lib "L43W32.DLL" Alias "_L43_CardTest3@4" (ByVal handleval As Long) As Long
Public Declare Function L43_CFGRdL Lib "L43W32.DLL" Alias "_L43_CFGRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_CFGWrL Lib "L43W32.DLL" Alias "_L43_CFGWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Ch717Config Lib "L43W32.DLL" Alias "_L43_Ch717Config@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Ch717Create Lib "L43W32.DLL" Alias "_L43_Ch717Create@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_Ch717Reset Lib "L43W32.DLL" Alias "_L43_Ch717Reset@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChConfigEx Lib "L43W32.DLL" Alias "_L43_ChConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARClr Lib "L43W32.DLL" Alias "_L43_ChDARClr@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARGet Lib "L43W32.DLL" Alias "_L43_ChDARGet@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARRdL Lib "L43W32.DLL" Alias "_L43_ChDARRdL@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARRdW Lib "L43W32.DLL" Alias "_L43_ChDARRdW@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function L43_ChDARSet Lib "L43W32.DLL" Alias "_L43_ChDARSet@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARWrL Lib "L43W32.DLL" Alias "_L43_ChDARWrL@16" (ByVal value As Long, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChDARWrW Lib "L43W32.DLL" Alias "_L43_ChDARWrW@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function L43_ChStart Lib "L43W32.DLL" Alias "_L43_ChStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
